fixed order of players, kev events,  unknown options problem, times not showing, temp fix for gameid, cleaned up html css

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
     margin: 3vmin;
     width: 30vw;
     height: 28vw;
-    overflow-y: scroll;
+    overflow-y: auto;
     background-color: transparent;
     border: var(--pico-contrast) 0.2vmin dashed;
     border-radius: 2vmin;
